--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/Tyriar/js-design-patterns",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-eslint": "^12.0.0",
     "grunt-jasmine-node-coverage": "^0.4.1",
     "jasmine-node": "^1.14.3",
     "jasmine-reporters": ">=0.2.0 <2.0.0"
