--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,9 @@
 {
+  'globals': {
+    'define': true,
+    'module': true,
+    'require': true
+  },
   'rules': {
     'quotes': [1, 'single'],
     'no-return-assign': false,
